# ChangeLog for www-client/seamonkey
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.27 2006/10/25 04:04:06 tsunam Exp $

  25 Oct 2006; Joshua Jackson <tsunam@gentoo.org> seamonkey-1.0.5.ebuild:
  Adding new patch for bug #146357

  15 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> seamonkey-1.0.5.ebuild:
  Stable on ia64, bug 147651.

  11 Oct 2006; Thomas Cort <tcort@gentoo.org> seamonkey-1.0.5.ebuild:
  Stable on alpha wrt security Bug #147651.

  09 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  seamonkey-1.0.5.ebuild:
  Stable on amd64/x86 wrt bug #147651.

  08 Oct 2006; René Nussbaumer <killerfox@gentoo.org>
  seamonkey-1.0.5.ebuild:
  Stable on hppa, ppc. See bug #147651.

*seamonkey-1.0.5 (07 Oct 2006)

  07 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  +seamonkey-1.0.5.ebuild:
  Bump version to 1.0.5.

  02 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> seamonkey-1.0.3.ebuild:
  Stable on ia64.

  19 Aug 2006; Bryan Østergaard <kloeri@gentoo.org> seamonkey-1.0.3.ebuild:
  Add ~ia64 keyword.

  02 Aug 2006; Simon Stelling <blubb@gentoo.org> seamonkey-1.0.3.ebuild:
  stable on amd64 wrt bug 141842

  01 Aug 2006; Paul Varner <fuzzyray@gentoo.org> seamonkey-1.0.3.ebuild:
  Stable on x86 wrt security Bug #141842

  01 Aug 2006; Thomas Cort <tcort@gentoo.org> seamonkey-1.0.3.ebuild:
  Stable on alpha wrt security Bug #141842.

  31 Jul 2006; Rene Nussbaumer <killerfox@gentoo.org>
  seamonkey-1.0.3.ebuild:
  Stable on hppa. See bug #141842.

  29 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  seamonkey-1.0.3.ebuild:
  ppc stable, bug #141842

*seamonkey-1.0.3 (28 Jul 2006)

  28 Jul 2006; Bryan Østergaard <kloeri@gentoo.org>
  +seamonkey-1.0.3.ebuild:
  Bump version, bug 141842.

  07 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> seamonkey-1.0.2.ebuild:
  Add ~x86-fbsd keyword.

  26 Jun 2006; Guy Martin <gmsoft@gentoo.org> seamonkey-1.0.2.ebuild: