@@ -1,0 +1,9 @@
+MD5 d326c302c1d2d68217fffcaa01ca7632 enigmail-0.94.0.tar.gz 508113
+RMD160 0fa8f0384b74623c1b84a048bdbf04bfca8c1824 enigmail-0.94.0.tar.gz 508113
+SHA256 db2b5fc014fe5efef95fc46804ac609616557b1696d5f355d2d7641e567904f3 enigmail-0.94.0.tar.gz 508113
+MD5 5dea70924fd969d6278939c5545ed2d8 seamonkey-1.0.6-patches-0.1.tar.bz2 18102
+RMD160 5430a5857f490a2dd0a8e47b9888998bc5fd4824 seamonkey-1.0.6-patches-0.1.tar.bz2 18102
+SHA256 aafec137cda07d512c9a453308f21a98228b6c42e90950ed591c40dd780e0ad7 seamonkey-1.0.6-patches-0.1.tar.bz2 18102
+MD5 16e1c6bab1e3832b22863933b5b032e7 seamonkey-1.0.6.source.tar.bz2 35900661
+RMD160 61ba4a30c28d857f6f64649879ba12d64001c7a6 seamonkey-1.0.6.source.tar.bz2 35900661
+SHA256 2cf332f6c0297151905c186611aa7226cf185c8a1056e7027743292baf189147 seamonkey-1.0.6.source.tar.bz2 35900661
