@@ -1,6 +1,12 @@
 # ChangeLog for www-client/seamonkey
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.27 2006/10/25 04:04:06 tsunam Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/seamonkey/ChangeLog,v 1.28 2006/11/08 21:46:46 kloeri Exp $
+
+*seamonkey-1.0.6 (08 Nov 2006)
+
+  08 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
+  +seamonkey-1.0.6.ebuild:
+  Version bump, bug 154449.
 
   25 Oct 2006; Joshua Jackson <tsunam@gentoo.org> seamonkey-1.0.5.ebuild:
   Adding new patch for bug #146357
